BUG: 133937

Update selection after paste. Also, don't preserve the word from a double-click selection when selecting with the keyboard.

svn path=/branches/KDE/3.5/kdelibs/; revision=633268